--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>Expenses-and-Income-service</name>
 	<description>Expenses and Income microservice</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -51,6 +51,11 @@
 			<artifactId>h2</artifactId>
 			<version>2.1.214</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.2.2</version>
 		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>org.javamoney</groupId>-->
